2013-05-30  Ales Ledvinka <aledvink@redhat.com>

	* common/toolcommon/pstdout.c (pstdout_vprintf): Fix portability
	bug, va_list is not a pointer type.
	
2013-05-29  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-time-options.man: Fix typo.

	* configure.ac, NEWS: Update for release.
	
2013-05-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c (ipmi_get_event_messages):
	Fix sensor event message corner case w/ OEM sensors.
	
2013-05-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/util/ipmi-util.h,
	libfreeipmi/util/ipmi-util.c (ipmi_checksum_incremental, ipmi_checksum_final): New
	function.

	* libfreeipmi/util/ipmi-util.c (_checksum): New common function. 

	* libfreeipmi/util/ipmi-util.c (ipmi_checksum): Use _checksum
	common function.

	* libfreeipmi/sdr/: Support checksums in SDR cache files to detect corruption.
	
2013-05-09  Albert Chu <chu11@llnl.gov>

	* bmc-device/bmc-device.c (get_sel_time_utc_offset): Fix output
	string error.
	
2013-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/interface/ipmi-network.h,
	libfreeipmi/interface/ipmi-network.c (ipmi_network_sendto): New
	function.

	* libfreeipmi/interface/ipmi-rmcpplus-interface.c (ipmi_rmcpplus_sendto):
	Call ipmi_network_sendto common function.

	* libfreeipmi/interface/ipmi-lan-interface.c (ipmi_lan_sendto):
	Call ipmi_network_sendto common function, do not pad legacy byte.
	
2013-05-08  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/record-format/ipmi-fru-dimmspd-record-format.c,
	libfreeipmi/include/freeipmi/templates/ipmi-fru-dimmspd-record-format-templates.h:
	Fix mistakes in tmpl_fru_dimm_spd_ddr3_record template.

	* ipmi-fru/ipmi-fru-output.h, ipmi-fru/ipmi-fru-output.c: Fix area
	length from uint8_t to unsigned int globally.

	* ipmi-fru/ipmi-fru-output.c (ipmi_fru_output_dimm): Fix object
	creation corner case.

	* libfreeipmi/util/ipmi-jedec-manufacturer-identification-code-util.c (ipmi_jedec_manufacturer_id_search):